fixed the grid colors and horizontal lines not showing

--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 200px;
+  margin-top: 230px;
 }
